plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.letspeppol'
version = '0.0.1-SNAPSHOT'
description = 'Know Your Customer'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'com.webauthn4j:webauthn4j-core:0.31.9.RELEASE'
    implementation 'dev.samstevens.totp:totp:1.7.1'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.81.1'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.81.1'
	implementation 'org.bouncycastle:bcutil-jdk18on:1.81.1'
    implementation 'com.itextpdf:bouncy-castle-adapter:9.3.0'
    implementation 'com.itextpdf:itext-core:9.3.0'
    implementation 'org.jsoup:jsoup:1.18.1'
    implementation 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.apache.pdfbox:pdfbox:3.0.2'
    implementation 'org.apache.pdfbox:fontbox:3.0.2'
    implementation 'com.github.loki4j:loki-logback-appender:2.0.1'
    // Maintained drop-in fork of the abandoned com.jcraft:jsch (CVE-2023-48795 / Terrapin).
    // Same com.jcraft.jsch package API.
    implementation 'com.github.mwiede:jsch:0.2.18'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-restclient'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'com.squareup.okhttp3:mockwebserver3:5.5.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootJar') {
    archiveFileName = 'kyc.jar'
}
